# B2B-Growth-Strategy

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: compat.py  config.py  main.py  models.py  storage.py
app/services/: formatter.py  llm.py  topic_engine.py  wechat.py  writing_engine.py
app/templates/: admin_dashboard.html
app/templates/wechat/: professional_consulting.html.j2
app/workers/: retry_worker.py
deploy/systemd/: b2b-retry-worker.service  b2b-retry-worker.timer
prompts/: article_writing.txt  topic_generation.txt  wechat_formatting.txt
scripts/: install_systemd_retry_worker.sh  run_retry_once.sh  setup_cron.sh  setup_windows_task.ps1
tests/: conftest.py  test_api.py  test_topic_engine.py
