[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b2b-content-growth-os"
version = "0.2.0"
description = "B2B 内容增长操作系统 MVP（FastAPI + SQLite/PostgreSQL）"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
packages = ["app", "app.services"]
include-package-data = true
